Fixed layout bug

--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -594,3 +594,7 @@ kbd {
 .overflow-auto {
     overflow-y: auto;
 }
+
+.overflow-hidden {
+    overflow-y: hidden;
+}
