--- a/resources/assets/sass/messages.scss
+++ b/resources/assets/sass/messages.scss
@@ -297,7 +297,7 @@
         flex: 1;
         width: 100%;
         overflow-y: scroll;
-        //padding: 1em 0;
+        padding: 1em 0;
         flex: 1;
     }
 
